// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MessageDetails component should match the snapshot with default props (is AAR false) 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <RNCSafeAreaProvider
    onInsetsChange={[Function]}
    style={
      [
        {
          "flex": 1,
        },
        undefined,
      ]
    }
  >
    <View
      style={
        [
          {
            "backgroundColor": "#FFFFFF",
            "flex": 1,
          },
          undefined,
        ]
      }
    >
      <View
        collapsable={false}
        pointerEvents="box-none"
        style={
          [
            {
              "zIndex": 1,
            },
            false,
          ]
        }
      >
        <View
          accessibilityElementsHidden={false}
          importantForAccessibility="auto"
          onLayout={[Function]}
          pointerEvents="box-none"
          style={null}
        >
          <View
            collapsable={false}
            pointerEvents="box-none"
            style={
              {
                "bottom": 0,
                "left": 0,
                "opacity": 1,
                "position": "absolute",
                "right": 0,
                "top": 0,
                "zIndex": 0,
              }
            }
          >
            <View
              collapsable={false}
              style={
                [
                  {
                    "flex": 1,
                    "shadowOffset": {
                      "height": 0.5,
                      "width": 0,
                    },
                    "shadowOpacity": 0.85,
                    "shadowRadius": 0,
                  },
                  {
                    "backgroundColor": "#FFFFFF",
                    "borderBottomColor": "rgb(216, 216, 216)",
                    "shadowColor": "rgb(216, 216, 216)",
                  },
                  [
                    {},
                    false,
                  ],
                ]
              }
            />
          </View>
          <View
            collapsable={false}
            pointerEvents="box-none"
            style={
              [
                {
                  "height": 44,
                  "maxHeight": undefined,
                  "minHeight": undefined,
                  "opacity": undefined,
                  "transform": undefined,
                },
              ]
            }
          >
            <View
              pointerEvents="none"
              style={
                {
                  "height": 0,
                }
              }
            />
            <View
              pointerEvents="box-none"
              style={
                {
                  "alignItems": "stretch",
                  "flex": 1,
                  "flexDirection": "row",
                }
              }
            >
              <View
                collapsable={false}
                pointerEvents="box-none"
                style={
                  {
                    "alignItems": "flex-start",
                    "flexBasis": 0,
                    "flexGrow": 1,
                    "justifyContent": "center",
                    "marginStart": 0,
                    "opacity": 1,
                  }
                }
              />
              <View
                collapsable={false}
                pointerEvents="box-none"
                style={
                  {
                    "justifyContent": "center",
                    "marginHorizontal": 16,
                    "maxWidth": 718,
                    "opacity": 1,
                  }
                }
              >
                <Text
                  accessibilityRole="header"
                  aria-level="1"
                  collapsable={false}
                  numberOfLines={1}
                  onLayout={[Function]}
                  style={
                    [
                      {
                        "fontSize": 17,
                        "fontWeight": "600",
                      },
                      {
                        "color": "rgb(28, 28, 30)",
                      },
                      undefined,
                    ]
                  }
                >
                  DUMMY_ROUTE
                </Text>
              </View>
              <View
                collapsable={false}
                pointerEvents="box-none"
                style={
                  {
                    "alignItems": "flex-end",
                    "flexBasis": 0,
                    "flexGrow": 1,
                    "justifyContent": "center",
                    "marginEnd": 0,
                    "opacity": 1,
                  }
                }
              />
            </View>
          </View>
        </View>
      </View>
      <RNSScreenContainer
        onLayout={[Function]}
        style={
          {
            "flex": 1,
          }
        }
      >
        <RNSScreen
          activityState={2}
          collapsable={false}
          gestureResponseDistance={
            {
              "bottom": -1,
              "end": -1,
              "start": -1,
              "top": -1,
            }
          }
          onGestureCancel={[Function]}
          pointerEvents="box-none"
          sheetAllowedDetents={
            [
              1,
            ]
          }
          sheetCornerRadius={-1}
          sheetElevation={24}
          sheetExpandsWhenScrolledToEdge={true}
          sheetGrabberVisible={false}
          sheetInitialDetent={0}
          sheetLargestUndimmedDetent={-1}
          style={
            [
              {
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
              {
                "zIndex": undefined,
              },
            ]
          }
        >
          <View
            collapsable={false}
            style={
              {
                "opacity": 1,
              }
            }
          />
          <View
            accessibilityElementsHidden={false}
            closing={false}
            collapsable={false}
            gestureVelocityImpact={0.3}
            importantForAccessibility="auto"
            onClose={[Function]}
            onGestureBegin={[Function]}
            onGestureCanceled={[Function]}
            onGestureEnd={[Function]}
            onOpen={[Function]}
            onTransition={[Function]}
            pointerEvents="box-none"
            style={
              [
                {
                  "display": "flex",
                  "overflow": undefined,
                },
                {
                  "bottom": 0,
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                },
              ]
            }
            transitionSpec={
              {
                "close": {
                  "animation": "spring",
                  "config": {
                    "damping": 500,
                    "mass": 3,
                    "overshootClamping": true,
                    "restDisplacementThreshold": 10,
                    "restSpeedThreshold": 10,
                    "stiffness": 1000,
                  },
                },
                "open": {
                  "animation": "spring",
                  "config": {
                    "damping": 500,
                    "mass": 3,
                    "overshootClamping": true,
                    "restDisplacementThreshold": 10,
                    "restSpeedThreshold": 10,
                    "stiffness": 1000,
                  },
                },
              }
            }
          >
            <View
              collapsable={false}
              pointerEvents="box-none"
              style={
                [
                  {
                    "flex": 1,
                  },
                  undefined,
                  null,
                ]
              }
            >
              <View
                collapsable={false}
                enabled={false}
                handlerTag={-1}
                handlerType="PanGestureHandler"
                needsOffscreenAlphaCompositing={false}
                onGestureHandlerEvent={[Function]}
                onGestureHandlerStateChange={[Function]}
                style={
                  {
                    "flex": 1,
                    "transform": [
                      {
                        "translateX": 0,
                      },
                      {
                        "translateX": 0,
                      },
                    ],
                  }
                }
              >
                <View
                  pointerEvents="box-none"
                  style={
                    [
                      {
                        "flex": 1,
                        "overflow": "hidden",
                      },
                      [
                        {
                          "backgroundColor": "#FFFFFF",
                        },
                        undefined,
                      ],
                    ]
                  }
                >
                  <View
                    style={
                      {
                        "flex": 1,
                        "flexDirection": "column-reverse",
                      }
                    }
                  >
                    <View
                      style={
                        {
                          "flex": 1,
                        }
                      }
                    >
                      <RCTScrollView
                        contentContainerStyle={
                          {
                            "paddingBottom": 0,
                          }
                        }
                      >
                        <View>
                          <View
                            style={
                              {
                                "paddingHorizontal": 24,
                              }
                            }
                          >
                            <View
                              style={
                                {
                                  "display": "flex",
                                  "flexDirection": "column",
                                  "gap": 8,
                                }
                              }
                            >
                              <View
                                style={
                                  {
                                    "alignItems": "center",
                                    "flexDirection": "row",
                                    "flexWrap": "wrap",
                                    "gap": 8,
                                    "justifyContent": "flex-start",
                                  }
                                }
                              >
                                <View
                                  style={
                                    [
                                      {
                                        "alignItems": "center",
                                        "alignSelf": "flex-start",
                                        "borderCurve": "continuous",
                                        "borderWidth": 1,
                                        "flexDirection": "row",
                                        "justifyContent": "center",
                                      },
                                      {
                                        "borderRadius": 9,
                                        "columnGap": 9,
                                        "paddingHorizontal": 12,
                                        "paddingVertical": 9,
                                      },
                                      {
                                        "backgroundColor": "#FFFFFF",
                                        "borderColor": "#E8EBF1",
                                      },
                                    ]
                                  }
                                >
                                  <View
                                    style={
                                      {
                                        "flexShrink": 1,
                                      }
                                    }
                                  >
                                    <RNSVGSvgView
                                      accessibilityElementsHidden={true}
                                      accessibilityLabel=""
                                      accessible={false}
                                      align="xMidYMid"
                                      bbHeight={24}
                                      bbWidth={24}
                                      color="#0B3EE3"
                                      focusable={false}
                                      height={24}
                                      importantForAccessibility="no-hide-descendants"
                                      meetOrSlice={0}
                                      minX={0}
                                      minY={0}
                                      style={
                                        [
                                          {
                                            "backgroundColor": "transparent",
                                            "borderWidth": 0,
                                          },
                                          {
                                            "flex": 0,
                                            "height": 24,
                                            "width": 24,
                                          },
                                        ]
                                      }
                                      vbHeight={24}
                                      vbWidth={24}
                                      width={24}
                                    >
                                      <RNSVGGroup
                                        fill={
                                          {
                                            "payload": 4278190080,
                                            "type": 0,
                                          }
                                        }
                                      >
                                        <RNSVGPath
                                          clipRule={0}
                                          d="M23.3953 14.8922c.4031-.7125.6047-1.4906.6047-2.3297 0-.8906-.225-1.7109-.6703-2.4562-.4453-.74067-1.0453-1.28911-1.7953-1.64536.1781-.48281.2672-1.01719.2672-1.60782 0-1.26562-.4219-2.34374-1.2704-3.23906-.8484-.89531-1.8703-1.34062-3.0656-1.34062-.539 0-1.0453.09844-1.5281.29531-.375-.76875-.9188-1.3875-1.6219-1.86094C13.6125.23906 12.8391 0 12 0s-1.6125.23906-2.31562.7125c-.70782.47344-1.24688 1.09219-1.62188 1.86094-.48281-.19688-.99375-.29532-1.52813-.29532-1.19531 0-2.22187.45-3.07968 1.34063-.85782.89062-1.28438 1.97344-1.28438 3.23906 0 .53438.09844 1.07344.29531 1.60782-.75.35625-1.34999.90468-1.7953 1.64527C.225 10.8516 0 11.6719 0 12.5625c0 .8391.20156 1.6172.6 2.3297.40313.7125.94219 1.2656 1.62188 1.6594-.03282.2531-.05157.45-.05157.5906 0 1.2656.42656 2.3484 1.28438 3.239.85781.8954 1.88437 1.3407 3.07968 1.3407.53907 0 1.04532-.0985 1.52813-.2953.375.7875.90938 1.4109 1.60781 1.875C10.3641 23.7703 11.1422 24 12 24c.8391 0 1.6125-.2344 2.3156-.7125.7078-.4734 1.2469-1.0922 1.6219-1.8609.4828.1968.9937.2953 1.5281.2953 1.1953 0 2.2172-.4453 3.0656-1.3407.8438-.8906 1.2704-1.9687 1.2704-3.239 0-.2672-.0094-.4641-.0282-.5906.6797-.3891 1.2188-.9469 1.6219-1.6594Zm-5.6882-4.1851c.3905-.3905.3905-1.02368 0-1.41421-.3905-.39052-1.0237-.39052-1.4142 0L10 15.5858l-3.29289-3.2929c-.39053-.3905-1.02369-.3905-1.41422 0-.39052.3905-.39052 1.0237 0 1.4142L8.58579 17c.78105.7811 2.04741.781 2.82841 0l6.2929-6.2929Z"
                                          fill={
                                            {
                                              "type": 2,
                                            }
                                          }
                                          fillRule={0}
                                          propList={
                                            [
                                              "fill",
                                              "fillRule",
                                            ]
                                          }
                                        />
                                      </RNSVGGroup>
                                    </RNSVGSvgView>
                                  </View>
                                  <Text
                                    allowFontScaling={true}
                                    ellipsizeMode="tail"
                                    maxFontSizeMultiplier={1.5}
                                    numberOfLines={1}
                                    style={
                                      [
                                        {},
                                        {
                                          "color": "#555C70",
                                          "fontFamily": "Titillio",
                                          "fontSize": 12,
                                          "fontStyle": "normal",
                                          "fontWeight": "600",
                                          "lineHeight": 16,
                                        },
                                        {
                                          "alignSelf": "center",
                                          "flexShrink": 1,
                                          "letterSpacing": 0.5,
                                          "textTransform": "uppercase",
                                        },
                                      ]
                                    }
                                  >
                                    Valore legale
                                  </Text>
                                </View>
                                <RNSVGSvgView
                                  accessibilityElementsHidden={true}
                                  accessibilityLabel="Contiene allegati"
                                  accessible={false}
                                  align="xMidYMid"
                                  bbHeight={16}
                                  bbWidth={16}
                                  color="#636B82"
                                  focusable={false}
                                  height={16}
                                  importantForAccessibility="no-hide-descendants"
                                  meetOrSlice={0}
                                  minX={0}
                                  minY={0}
                                  style={
                                    [
                                      {
                                        "backgroundColor": "transparent",
                                        "borderWidth": 0,
                                      },
                                      {
                                        "flex": 0,
                                        "height": 16,
                                        "width": 16,
                                      },
                                    ]
                                  }
                                  testID="attachment-tag"
                                  vbHeight={24}
                                  vbWidth={24}
                                  width={16}
                                >
                                  <RNSVGGroup
                                    fill={
                                      {
                                        "payload": 4278190080,
                                        "type": 0,
                                      }
                                    }
                                  >
                                    <RNSVGPath
                                      d="M22.95 9.5997a.9999.9999 0 0 0-.707-.29279c-.2651 0-.5195.10532-.707.29279l-10.892 10.939a4.99896 4.99896 0 0 1-1.62212 1.084 4.99813 4.99813 0 0 1-1.9135.3808 5.00017 5.00017 0 0 1-3.53586-1.4643 5.00042 5.00042 0 0 1-1.4648-3.5357 5.00026 5.00026 0 0 1 1.4643-3.5358L14.121 2.8757a3.00005 3.00005 0 0 1 4.2253.0167 2.99985 2.99985 0 0 1 .8789 2.109 2.99996 2.99996 0 0 1-.8612 2.1163L7.81502 17.7097a1.0218 1.0218 0 0 1-.707.284 1.02182 1.02182 0 0 1-.707-.284.99989.99989 0 0 1-.29278-.707c0-.2652.10531-.5195.29278-.707l9.39198-9.435a.99975.99975 0 0 0 .2807-.7034 1.00018 1.00018 0 0 0-.2929-.69842.99994.99994 0 0 0-1.4018-.01218l-9.39198 9.435a3.00022 3.00022 0 0 0-.65045.9733 3.00027 3.00027 0 0 0 0 2.2964c.1508.364.37182.6947.65045.9733a3.07287 3.07287 0 0 0 2.1215.8498 3.07287 3.07287 0 0 0 2.1215-.8498L19.778 8.5317a5.0001 5.0001 0 0 0 1.4196-3.52223 4.99983 4.99983 0 0 0-1.4646-3.50375A5.0001 5.0001 0 0 0 16.229.0416a5.00012 5.00012 0 0 0-3.522 1.4201L2.15802 12.0537C.8452 13.3665.10767 15.1471.10767 17.0037c0 1.8566.73753 3.6372 2.05035 4.95 1.31282 1.3128 3.09339 2.0504 4.95 2.0504 1.85661 0 3.63718-.7376 4.94998-2.0504l10.892-10.936a.99968.99968 0 0 0 .2948-.709c0-.1318-.026-.2623-.0766-.38392a.999.999 0 0 0-.2182-.32508Z"
                                      fill={
                                        {
                                          "type": 2,
                                        }
                                      }
                                      propList={
                                        [
                                          "fill",
                                        ]
                                      }
                                    />
                                  </RNSVGGroup>
                                </RNSVGSvgView>
                              </View>
                              <View
                                style={
                                  {
                                    "display": "flex",
                                    "flexDirection": "column",
                                    "gap": 8,
                                  }
                                }
                              >
                                <Text
                                  accessibilityRole="header"
                                  allowFontScaling={true}
                                  dynamicTypeRamp="title2"
                                  maxFontSizeMultiplier={1.5}
                                  style={
                                    [
                                      {},
                                      {
                                        "color": "#0E0F13",
                                        "fontFamily": "Titillio",
                                        "fontSize": 22,
                                        "fontStyle": "normal",
                                        "fontWeight": "600",
                                        "lineHeight": 33,
                                      },
                                    ]
                                  }
                                  testID="message-header-subject"
                                >
                                  ######## subject ########
                                </Text>
                                <Text
                                  allowFontScaling={true}
                                  dynamicTypeRamp="footnote"
                                  maxFontSizeMultiplier={1.5}
                                  style={
                                    [
                                      {},
                                      {
                                        "color": "#555C70",
                                        "fontFamily": "Titillio",
                                        "fontSize": 14,
                                        "fontStyle": "normal",
                                        "fontWeight": "400",
                                        "lineHeight": 21,
                                      },
                                    ]
                                  }
                                  testID="date"
                                >
                                  01 gen 2020, 00:00
                                </Text>
                              </View>
                            </View>
                            <View
                              style={
                                {
                                  "height": 16,
                                }
                              }
                            />
                            <Text
                              allowFontScaling={true}
                              dynamicTypeRamp="footnote"
                              maxFontSizeMultiplier={1.5}
                              style={
                                [
                                  {},
                                  {
                                    "color": "#555C70",
                                    "fontFamily": "Titillio",
                                    "fontSize": 14,
                                    "fontStyle": "normal",
                                    "fontWeight": "400",
                                    "lineHeight": 21,
                                  },
                                ]
                              }
                            >
                              Hai
                              <Text
                                allowFontScaling={true}
                                dynamicTypeRamp="footnote"
                                maxFontSizeMultiplier={1.5}
                                style={
                                  [
                                    {},
                                    {
                                      "color": "#555C70",
                                      "fontFamily": "Titillio",
                                      "fontSize": 14,
                                      "fontStyle": "normal",
                                      "fontWeight": "400",
                                      "lineHeight": 21,
                                    },
                                  ]
                                }
                              >
                                 ricevuto una notifica SEND: è una comunicazione a valore legale inviata da 
                                <Text
                                  allowFontScaling={true}
                                  dynamicTypeRamp="footnote"
                                  maxFontSizeMultiplier={1.5}
                                  style={
                                    [
                                      {},
                                      {
                                        "color": "#555C70",
                                        "fontFamily": "Titillio",
                                        "fontSize": 14,
                                        "fontStyle": "normal",
                                        "fontWeight": "600",
                                        "lineHeight": 21,
                                      },
                                    ]
                                  }
                                >
                                  Sender denomination
                                </Text>
                              </Text>
                              . Consulta i documenti allegati per scoprire tutti i dettagli. 

Se è previsto un pagamento, puoi farlo ora da IO con il tuo metodo preferito.
                            </Text>
                            <View
                              style={
                                {
                                  "height": 16,
                                }
                              }
                            />
                            <View>
                              Mock MessageDetailsAttachments
                            </View>
                            <View>
                              Has Banner
                            </View>
                            <View>
                              Is not disabled
                            </View>
                            <View>
                              Is SEND
                            </View>
                            <View>
                              Message Id: 01HRYR6C761DGH3S84HBBXMMKT
                            </View>
                            <View>
                              Service Id: service_one
                            </View>
                            <View
                              style={
                                {
                                  "height": 16,
                                }
                              }
                            />
                            <View
                              style={
                                {
                                  "height": 16,
                                }
                              }
                            />
                            <View
                              style={
                                {
                                  "height": 16,
                                }
                              }
                            />
                          </View>
                          <View>
                            Mock MessageBottomMenu
                          </View>
                          <View>
                            731143-7-0317-8200-0
                          </View>
                          <View>
                            01HRYR6C761DGH3S84HBBXMMKT
                          </View>
                        </View>
                      </RCTScrollView>
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </RNSScreen>
      </RNSScreenContainer>
    </View>
  </RNCSafeAreaProvider>
</View>
`;

exports[`MessageDetails component should match the snapshot with default props (is AAR true) 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <RNCSafeAreaProvider
    onInsetsChange={[Function]}
    style={
      [
        {
          "flex": 1,
        },
        undefined,
      ]
    }
  >
    <View
      style={
        [
          {
            "backgroundColor": "#FFFFFF",
            "flex": 1,
          },
          undefined,
        ]
      }
    >
      <View
        collapsable={false}
        pointerEvents="box-none"
        style={
          [
            {
              "zIndex": 1,
            },
            false,
          ]
        }
      >
        <View
          accessibilityElementsHidden={false}
          importantForAccessibility="auto"
          onLayout={[Function]}
          pointerEvents="box-none"
          style={null}
        >
          <View
            collapsable={false}
            pointerEvents="box-none"
            style={
              {
                "bottom": 0,
                "left": 0,
                "opacity": 1,
                "position": "absolute",
                "right": 0,
                "top": 0,
                "zIndex": 0,
              }
            }
          >
            <View
              collapsable={false}
              style={
                [
                  {
                    "flex": 1,
                    "shadowOffset": {
                      "height": 0.5,
                      "width": 0,
                    },
                    "shadowOpacity": 0.85,
                    "shadowRadius": 0,
                  },
                  {
                    "backgroundColor": "#FFFFFF",
                    "borderBottomColor": "rgb(216, 216, 216)",
                    "shadowColor": "rgb(216, 216, 216)",
                  },
                  [
                    {},
                    false,
                  ],
                ]
              }
            />
          </View>
          <View
            collapsable={false}
            pointerEvents="box-none"
            style={
              [
                {
                  "height": 44,
                  "maxHeight": undefined,
                  "minHeight": undefined,
                  "opacity": undefined,
                  "transform": undefined,
                },
              ]
            }
          >
            <View
              pointerEvents="none"
              style={
                {
                  "height": 0,
                }
              }
            />
            <View
              pointerEvents="box-none"
              style={
                {
                  "alignItems": "stretch",
                  "flex": 1,
                  "flexDirection": "row",
                }
              }
            >
              <View
                collapsable={false}
                pointerEvents="box-none"
                style={
                  {
                    "alignItems": "flex-start",
                    "flexBasis": 0,
                    "flexGrow": 1,
                    "justifyContent": "center",
                    "marginStart": 0,
                    "opacity": 1,
                  }
                }
              />
              <View
                collapsable={false}
                pointerEvents="box-none"
                style={
                  {
                    "justifyContent": "center",
                    "marginHorizontal": 16,
                    "maxWidth": 718,
                    "opacity": 1,
                  }
                }
              >
                <Text
                  accessibilityRole="header"
                  aria-level="1"
                  collapsable={false}
                  numberOfLines={1}
                  onLayout={[Function]}
                  style={
                    [
                      {
                        "fontSize": 17,
                        "fontWeight": "600",
                      },
                      {
                        "color": "rgb(28, 28, 30)",
                      },
                      undefined,
                    ]
                  }
                >
                  DUMMY_ROUTE
                </Text>
              </View>
              <View
                collapsable={false}
                pointerEvents="box-none"
                style={
                  {
                    "alignItems": "flex-end",
                    "flexBasis": 0,
                    "flexGrow": 1,
                    "justifyContent": "center",
                    "marginEnd": 0,
                    "opacity": 1,
                  }
                }
              />
            </View>
          </View>
        </View>
      </View>
      <RNSScreenContainer
        onLayout={[Function]}
        style={
          {
            "flex": 1,
          }
        }
      >
        <RNSScreen
          activityState={2}
          collapsable={false}
          gestureResponseDistance={
            {
              "bottom": -1,
              "end": -1,
              "start": -1,
              "top": -1,
            }
          }
          onGestureCancel={[Function]}
          pointerEvents="box-none"
          sheetAllowedDetents={
            [
              1,
            ]
          }
          sheetCornerRadius={-1}
          sheetElevation={24}
          sheetExpandsWhenScrolledToEdge={true}
          sheetGrabberVisible={false}
          sheetInitialDetent={0}
          sheetLargestUndimmedDetent={-1}
          style={
            [
              {
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
              {
                "zIndex": undefined,
              },
            ]
          }
        >
          <View
            collapsable={false}
            style={
              {
                "opacity": 1,
              }
            }
          />
          <View
            accessibilityElementsHidden={false}
            closing={false}
            collapsable={false}
            gestureVelocityImpact={0.3}
            importantForAccessibility="auto"
            onClose={[Function]}
            onGestureBegin={[Function]}
            onGestureCanceled={[Function]}
            onGestureEnd={[Function]}
            onOpen={[Function]}
            onTransition={[Function]}
            pointerEvents="box-none"
            style={
              [
                {
                  "display": "flex",
                  "overflow": undefined,
                },
                {
                  "bottom": 0,
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                },
              ]
            }
            transitionSpec={
              {
                "close": {
                  "animation": "spring",
                  "config": {
                    "damping": 500,
                    "mass": 3,
                    "overshootClamping": true,
                    "restDisplacementThreshold": 10,
                    "restSpeedThreshold": 10,
                    "stiffness": 1000,
                  },
                },
                "open": {
                  "animation": "spring",
                  "config": {
                    "damping": 500,
                    "mass": 3,
                    "overshootClamping": true,
                    "restDisplacementThreshold": 10,
                    "restSpeedThreshold": 10,
                    "stiffness": 1000,
                  },
                },
              }
            }
          >
            <View
              collapsable={false}
              pointerEvents="box-none"
              style={
                [
                  {
                    "flex": 1,
                  },
                  undefined,
                  null,
                ]
              }
            >
              <View
                collapsable={false}
                enabled={false}
                handlerTag={-1}
                handlerType="PanGestureHandler"
                needsOffscreenAlphaCompositing={false}
                onGestureHandlerEvent={[Function]}
                onGestureHandlerStateChange={[Function]}
                style={
                  {
                    "flex": 1,
                    "transform": [
                      {
                        "translateX": 0,
                      },
                      {
                        "translateX": 0,
                      },
                    ],
                  }
                }
              >
                <View
                  pointerEvents="box-none"
                  style={
                    [
                      {
                        "flex": 1,
                        "overflow": "hidden",
                      },
                      [
                        {
                          "backgroundColor": "#FFFFFF",
                        },
                        undefined,
                      ],
                    ]
                  }
                >
                  <View
                    style={
                      {
                        "flex": 1,
                        "flexDirection": "column-reverse",
                      }
                    }
                  >
                    <View
                      style={
                        {
                          "flex": 1,
                        }
                      }
                    >
                      <RCTScrollView
                        contentContainerStyle={
                          {
                            "paddingBottom": 0,
                          }
                        }
                      >
                        <View>
                          <View
                            style={
                              {
                                "paddingHorizontal": 24,
                              }
                            }
                          >
                            <View
                              style={
                                {
                                  "display": "flex",
                                  "flexDirection": "column",
                                  "gap": 8,
                                }
                              }
                            >
                              <View
                                style={
                                  {
                                    "alignItems": "center",
                                    "flexDirection": "row",
                                    "flexWrap": "wrap",
                                    "gap": 8,
                                    "justifyContent": "flex-start",
                                  }
                                }
                              >
                                <View
                                  style={
                                    [
                                      {
                                        "alignItems": "center",
                                        "alignSelf": "flex-start",
                                        "borderCurve": "continuous",
                                        "borderWidth": 1,
                                        "flexDirection": "row",
                                        "justifyContent": "center",
                                      },
                                      {
                                        "borderRadius": 9,
                                        "columnGap": 9,
                                        "paddingHorizontal": 12,
                                        "paddingVertical": 9,
                                      },
                                      {
                                        "backgroundColor": "#FFFFFF",
                                        "borderColor": "#E8EBF1",
                                      },
                                    ]
                                  }
                                >
                                  <View
                                    style={
                                      {
                                        "flexShrink": 1,
                                      }
                                    }
                                  >
                                    <RNSVGSvgView
                                      accessibilityElementsHidden={true}
                                      accessibilityLabel=""
                                      accessible={false}
                                      align="xMidYMid"
                                      bbHeight={24}
                                      bbWidth={24}
                                      color="#0B3EE3"
                                      focusable={false}
                                      height={24}
                                      importantForAccessibility="no-hide-descendants"
                                      meetOrSlice={0}
                                      minX={0}
                                      minY={0}
                                      style={
                                        [
                                          {
                                            "backgroundColor": "transparent",
                                            "borderWidth": 0,
                                          },
                                          {
                                            "flex": 0,
                                            "height": 24,
                                            "width": 24,
                                          },
                                        ]
                                      }
                                      vbHeight={24}
                                      vbWidth={24}
                                      width={24}
                                    >
                                      <RNSVGGroup
                                        fill={
                                          {
                                            "payload": 4278190080,
                                            "type": 0,
                                          }
                                        }
                                      >
                                        <RNSVGPath
                                          clipRule={0}
                                          d="M23.3953 14.8922c.4031-.7125.6047-1.4906.6047-2.3297 0-.8906-.225-1.7109-.6703-2.4562-.4453-.74067-1.0453-1.28911-1.7953-1.64536.1781-.48281.2672-1.01719.2672-1.60782 0-1.26562-.4219-2.34374-1.2704-3.23906-.8484-.89531-1.8703-1.34062-3.0656-1.34062-.539 0-1.0453.09844-1.5281.29531-.375-.76875-.9188-1.3875-1.6219-1.86094C13.6125.23906 12.8391 0 12 0s-1.6125.23906-2.31562.7125c-.70782.47344-1.24688 1.09219-1.62188 1.86094-.48281-.19688-.99375-.29532-1.52813-.29532-1.19531 0-2.22187.45-3.07968 1.34063-.85782.89062-1.28438 1.97344-1.28438 3.23906 0 .53438.09844 1.07344.29531 1.60782-.75.35625-1.34999.90468-1.7953 1.64527C.225 10.8516 0 11.6719 0 12.5625c0 .8391.20156 1.6172.6 2.3297.40313.7125.94219 1.2656 1.62188 1.6594-.03282.2531-.05157.45-.05157.5906 0 1.2656.42656 2.3484 1.28438 3.239.85781.8954 1.88437 1.3407 3.07968 1.3407.53907 0 1.04532-.0985 1.52813-.2953.375.7875.90938 1.4109 1.60781 1.875C10.3641 23.7703 11.1422 24 12 24c.8391 0 1.6125-.2344 2.3156-.7125.7078-.4734 1.2469-1.0922 1.6219-1.8609.4828.1968.9937.2953 1.5281.2953 1.1953 0 2.2172-.4453 3.0656-1.3407.8438-.8906 1.2704-1.9687 1.2704-3.239 0-.2672-.0094-.4641-.0282-.5906.6797-.3891 1.2188-.9469 1.6219-1.6594Zm-5.6882-4.1851c.3905-.3905.3905-1.02368 0-1.41421-.3905-.39052-1.0237-.39052-1.4142 0L10 15.5858l-3.29289-3.2929c-.39053-.3905-1.02369-.3905-1.41422 0-.39052.3905-.39052 1.0237 0 1.4142L8.58579 17c.78105.7811 2.04741.781 2.82841 0l6.2929-6.2929Z"
                                          fill={
                                            {
                                              "type": 2,
                                            }
                                          }
                                          fillRule={0}
                                          propList={
                                            [
                                              "fill",
                                              "fillRule",
                                            ]
                                          }
                                        />
                                      </RNSVGGroup>
                                    </RNSVGSvgView>
                                  </View>
                                  <Text
                                    allowFontScaling={true}
                                    ellipsizeMode="tail"
                                    maxFontSizeMultiplier={1.5}
                                    numberOfLines={1}
                                    style={
                                      [
                                        {},
                                        {
                                          "color": "#555C70",
                                          "fontFamily": "Titillio",
                                          "fontSize": 12,
                                          "fontStyle": "normal",
                                          "fontWeight": "600",
                                          "lineHeight": 16,
                                        },
                                        {
                                          "alignSelf": "center",
                                          "flexShrink": 1,
                                          "letterSpacing": 0.5,
                                          "textTransform": "uppercase",
                                        },
                                      ]
                                    }
                                  >
                                    Valore legale
                                  </Text>
                                </View>
                                <RNSVGSvgView
                                  accessibilityElementsHidden={true}
                                  accessibilityLabel="Contiene allegati"
                                  accessible={false}
                                  align="xMidYMid"
                                  bbHeight={16}
                                  bbWidth={16}
                                  color="#636B82"
                                  focusable={false}
                                  height={16}
                                  importantForAccessibility="no-hide-descendants"
                                  meetOrSlice={0}
                                  minX={0}
                                  minY={0}
                                  style={
                                    [
                                      {
                                        "backgroundColor": "transparent",
                                        "borderWidth": 0,
                                      },
                                      {
                                        "flex": 0,
                                        "height": 16,
                                        "width": 16,
                                      },
                                    ]
                                  }
                                  testID="attachment-tag"
                                  vbHeight={24}
                                  vbWidth={24}
                                  width={16}
                                >
                                  <RNSVGGroup
                                    fill={
                                      {
                                        "payload": 4278190080,
                                        "type": 0,
                                      }
                                    }
                                  >
                                    <RNSVGPath
                                      d="M22.95 9.5997a.9999.9999 0 0 0-.707-.29279c-.2651 0-.5195.10532-.707.29279l-10.892 10.939a4.99896 4.99896 0 0 1-1.62212 1.084 4.99813 4.99813 0 0 1-1.9135.3808 5.00017 5.00017 0 0 1-3.53586-1.4643 5.00042 5.00042 0 0 1-1.4648-3.5357 5.00026 5.00026 0 0 1 1.4643-3.5358L14.121 2.8757a3.00005 3.00005 0 0 1 4.2253.0167 2.99985 2.99985 0 0 1 .8789 2.109 2.99996 2.99996 0 0 1-.8612 2.1163L7.81502 17.7097a1.0218 1.0218 0 0 1-.707.284 1.02182 1.02182 0 0 1-.707-.284.99989.99989 0 0 1-.29278-.707c0-.2652.10531-.5195.29278-.707l9.39198-9.435a.99975.99975 0 0 0 .2807-.7034 1.00018 1.00018 0 0 0-.2929-.69842.99994.99994 0 0 0-1.4018-.01218l-9.39198 9.435a3.00022 3.00022 0 0 0-.65045.9733 3.00027 3.00027 0 0 0 0 2.2964c.1508.364.37182.6947.65045.9733a3.07287 3.07287 0 0 0 2.1215.8498 3.07287 3.07287 0 0 0 2.1215-.8498L19.778 8.5317a5.0001 5.0001 0 0 0 1.4196-3.52223 4.99983 4.99983 0 0 0-1.4646-3.50375A5.0001 5.0001 0 0 0 16.229.0416a5.00012 5.00012 0 0 0-3.522 1.4201L2.15802 12.0537C.8452 13.3665.10767 15.1471.10767 17.0037c0 1.8566.73753 3.6372 2.05035 4.95 1.31282 1.3128 3.09339 2.0504 4.95 2.0504 1.85661 0 3.63718-.7376 4.94998-2.0504l10.892-10.936a.99968.99968 0 0 0 .2948-.709c0-.1318-.026-.2623-.0766-.38392a.999.999 0 0 0-.2182-.32508Z"
                                      fill={
                                        {
                                          "type": 2,
                                        }
                                      }
                                      propList={
                                        [
                                          "fill",
                                        ]
                                      }
                                    />
                                  </RNSVGGroup>
                                </RNSVGSvgView>
                              </View>
                              <View
                                style={
                                  {
                                    "display": "flex",
                                    "flexDirection": "column",
                                    "gap": 8,
                                  }
                                }
                              >
                                <Text
                                  accessibilityRole="header"
                                  allowFontScaling={true}
                                  dynamicTypeRamp="title2"
                                  maxFontSizeMultiplier={1.5}
                                  style={
                                    [
                                      {},
                                      {
                                        "color": "#0E0F13",
                                        "fontFamily": "Titillio",
                                        "fontSize": 22,
                                        "fontStyle": "normal",
                                        "fontWeight": "600",
                                        "lineHeight": 33,
                                      },
                                    ]
                                  }
                                  testID="message-header-subject"
                                >
                                  ######## subject ########
                                </Text>
                              </View>
                            </View>
                            <View
                              style={
                                {
                                  "height": 16,
                                }
                              }
                            />
                            <Text
                              allowFontScaling={true}
                              dynamicTypeRamp="body"
                              maxFontSizeMultiplier={1.5}
                              style={
                                [
                                  {},
                                  {
                                    "color": "#555C70",
                                    "fontFamily": "Titillio",
                                    "fontSize": 16,
                                    "fontStyle": "normal",
                                    "fontWeight": "400",
                                    "lineHeight": 24,
                                  },
                                ]
                              }
                            >
                              ######## abstract ########
                            </Text>
                            <View
                              style={
                                {
                                  "height": 16,
                                }
                              }
                            />
                            <View
                              style={
                                {
                                  "height": 16,
                                }
                              }
                            />
                            <View
                              style={
                                {
                                  "height": 16,
                                }
                              }
                            />
                            <View
                              style={
                                {
                                  "height": 16,
                                }
                              }
                            />
                          </View>
                          <View>
                            Mock MessageBottomMenu
                          </View>
                          <View>
                            true
                          </View>
                          <View>
                            731143-7-0317-8200-0
                          </View>
                          <View>
                            01HRYR6C761DGH3S84HBBXMMKT
                          </View>
                          <View>
                            service_one
                          </View>
                        </View>
                      </RCTScrollView>
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </RNSScreen>
      </RNSScreenContainer>
    </View>
  </RNCSafeAreaProvider>
</View>
`;
